# sokoban-solver

./: .gitignore  manage.py  pyproject.toml  render.yaml  requirements.txt
sokoban-frontend/: .eslintrc.json  package-lock.json  package.json  webpack.config.js
sokoban-frontend/public/: index.html
sokoban-frontend/src/: Selection.css  Selection.js  Sokoban.css  Sokoban.js  Solver.css  Solver.js  Walls.css  Walls.js  index.css  index.js
sokoban_app/: apps.py  models.py  views.py
sokoban_app/fixtures/: initial_data.json
sokoban_app/migrations/: 0001_initial.py
sokoban_backend/: asgi.py  settings.py  urls.py  wsgi.py
