[tool.poetry]
name = "sokoban-solver"
version = "0.1.0"
description = "..."
authors = ["Michał Sar"]
license = "MIT"
readme = "README.md"
packages = [{include = "sokoban-solver"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.6"
djangorestframework = "^3.14.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = "^6.3.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
django-cors-headers = "^3.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
